[tool.poetry]
name = "mushikui"
version = "0.1.0"
description = ""
authors = ["TomoyoshiHirata <tomoyoshi.hirata@arithmer.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
autopep8 = "^2.0.1"
pytest-cov = "^4.0.0"
black = "^23.1.0"
isort = "^5.12.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
